fix: change style scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
+ * {
+      scrollbar-width: thin;
+      scrollbar-color: rgba(155, 155, 155, 0.5) rgba(255, 255, 255, 0);
+  }
+
+  /* For WebKit */
+  *::-webkit-scrollbar {
+      width: 6px;
+  }
+
+  *::-webkit-scrollbar-track {
+      background: rgba(255, 255, 255, 0);
+  }
+
+  *::-webkit-scrollbar-thumb {
+      background-color: rgba(155, 155, 155, 0.5);
+      border-radius: 3px;
+      border: 1px solid rgba(255, 255, 255, 0);
+  }
+
+  *::-webkit-scrollbar-thumb:hover {
+      background-color: rgba(155, 155, 155, 0.8);
+  }
+
 #root {
   width: 100vw;
   height: 100vh;
